# rpc-client-python

./: .coverage  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
core/: __init__.py  errors.py
core/client/: client.py
core/models/: __init__.py  grading_criteria.py  objective.py  question.py  rubric.py  short_answer.py
docs/source/: conf.py  core.client.rst  core.errors.rst  core.models.rst  core.rst  index.rst
examples/: 01_rubrics.ipynb  02_questions.ipynb  03_orm_usage.ipynb  orm_integration.ipynb
tests/client/: test_client.py
tests/models/: test_criteria.py  test_objective.py  test_question.py  test_rubric.py
